examples/c/error-codes/violates-constraint/fatal/CV-CEA4-bad-static.output
CV-CEA4-bad-static.c:6:9: error: invalid operands to binary expression ('int' and 'int *')
  y = x - y;
      ~ ^ ~
1 error generated.
Error while processing /home/jtusil/projects/rv-match/rv-match/c-semantics/examples/c/error-codes/violates-constraint/fatal/.tmp-kcc-TdjpZ/pp-FQyA0.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
